fixed overflowing text in description

--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 .description {
-	justify-content: right;
+	padding-right: 1em;
 }
 
 img {
